src/objects/FieloPLT__Criterion__c.object
<CustomObject>
    <fields>
        <fullName>FieloPLT__BooleanValue__c</fullName>
        <defaultValue>false</defaultValue>
        <description>It stores a Criterion boolean value.</description>
        <inlineHelpText>It stores a criterion boolean value.</inlineHelpText>
        <label>Boolean Value</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloPLT__DateValue__c</fullName>
        <description>It stores a Criterion date value.</description>
        <inlineHelpText>It stores a Criterion date value.</inlineHelpText>
        <label>Date Value</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FieloPLT__FieldName__c</fullName>
        <description>Name of the compared field.</description>
        <inlineHelpText>Name of the compared field.</inlineHelpText>
        <label>Field Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloPLT__FieldType__c</fullName>
        <description>Compared field type.</description>
        <inlineHelpText>Compared field type.</inlineHelpText>
        <label>Field Type</label>
        <picklist>
            <picklistValues>
                <fullName>String</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boolean</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FieloPLT__IsField__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to compare with other field.</description>
        <inlineHelpText>Used to compare with other field.</inlineHelpText>
        <label>Field</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Level__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If completed, Level meets the Criterion.</description>
        <inlineHelpText>If completed, Level meets the Criterion.</inlineHelpText>
        <label>Level</label>
        <referenceTo>FieloPLT__Level__c</referenceTo>
        <relationshipLabel>Level Criteria</relationshipLabel>
        <relationshipName>LevelCriteria</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Name__c</fullName>
        <description>Criterion description.</description>
        <formula>HYPERLINK(&apos;/&apos; + Id, FieloPLT__FieldName__c + &apos; &apos; + Text(FieloPLT__Operator__c ) + &apos; &apos; + FieloPLT__Values__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Criterion description.</inlineHelpText>
        <label>Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloPLT__NumberValue__c</fullName>
        <description>It stores a Criterion number value.</description>
        <inlineHelpText>It stores a Criterion number value.</inlineHelpText>
        <label>Number Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Operator__c</fullName>
        <description>Rational operator.</description>
        <inlineHelpText>Rational operator.</inlineHelpText>
        <label>Operator</label>
        <picklist>
            <picklistValues>
                <fullName>equals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>not equals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>greater than</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>greater or equal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>less than</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>less or equal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>contains</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>not contains</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Order__c</fullName>
        <description>Criteria order.</description>
        <inlineHelpText>Criteria order.</inlineHelpText>
        <label>Order</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Rule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If completed, Rule meets the Criterion.</description>
        <inlineHelpText>If completed, Rule meets the Criterion.</inlineHelpText>
        <label>Rule</label>
        <referenceTo>FieloPLT__Rule__c</referenceTo>
        <relationshipLabel>RuleCriteria</relationshipLabel>
        <relationshipName>RuleCriteria</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Segment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If completed, Segment meets the Criterion.</description>
        <inlineHelpText>If completed, Segment meets the Criterion.</inlineHelpText>
        <label>Segment</label>
        <referenceTo>FieloPLT__Segment__c</referenceTo>
        <relationshipLabel>Criteria</relationshipLabel>
        <relationshipName>SegmentCriteria</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Values__c</fullName>
        <description>It stores text values.</description>
        <inlineHelpText>It stores text values.</inlineHelpText>
        <label>Values</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Criterion</label>
    <nameField>
        <displayFormat>C-{00000000}</displayFormat>
        <label>Criterion Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Criteria</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>